I18nSource refactoring